# pourRNA

./: .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  test.cpp
Default/: Makefile  config.status  sources.mk  subdir.mk
Default/misc/: Makefile
Default/src/: Makefile  config.h  subdir.mk
Default/src/BIUlibPart/: subdir.mk
Default/src/RNAkinetics/: subdir.mk
Default/src/SpookyHash/: subdir.mk
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
m4/: ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
misc/: Makefile.am  Makefile.in  rna_andronescu2007.par  rna_turner1999.par  rna_turner2004.par
packaging/: PKGBUILD.in  pourRNA.spec.in
packaging/debian/: changelog  control  copyright
perl/: RNAhelixpath.pl
scripts/: read_fasta_compute_findpath.py  read_matrix_plot_kinetics.R  read_matrix_plot_kinetics_sparse_colors.R
scripts/min_dijkstra/: min_dijkstra.py  read_csv_compute_saddle.py
src/: .#Makefile.am.1.12  .#ParKin_Explore.cpp.1.50  .#SC_PartitionFunction.cpp.1.7  .#SC_PartitionFunction.h.1.7  BarriersTree.cpp  BarriersTree.h  Concurrent_Pair_Hash_Map.h  Concurrent_Queue.h  Flooder.cpp  Flooder.h  GlobalParameter.cpp  GlobalParameter.h  Makefile.am  Makefile.in  MyState.cpp  MyState.h  PairHashMap.h  PairHashTable.h  ParKin.cpp  ParKin.ggo  ParKin_Explore.cpp  PriorityQueue.cpp  PriorityQueue.h  SC_DotPlot.cpp  SC_DotPlot.h  SC_PartitionFunction.cpp  SC_PartitionFunction.h  StateCollector.cpp  StateCollector.h  StatePairCollector.cpp  StatePairCollector.h  StructureUtils.cpp  StructureUtils.h  TypeID.cpp  TypeID.h  WalkGradientHashed.cpp  WalkGradientHashed.h  config.h.in  flooder_test.cpp  parKin.cpp  (+2 more)
src/BIUlibPart/: LimitedHash.hh  LimitedHash.icc  MatrixSparse.hh  MatrixSparse.icc  OptionParser.cpp  OptionParser.h  assertbiu.hh
src/RNAkinetics/: RNA_NeighMinFilter.cpp  RNA_NeighMinFilter.h  RateMatrixUtil.cpp  RateMatrixUtil.h
src/SpookyHash/: .#SpookyHashMap.h.1.3  SpookyHashMap.h  SpookyV2.cpp  SpookyV2.h
