AUTOMAKE_OPTIONS = subdir-objects

# the program to build
bin_PROGRAMS = 	parKin
				

# parKin sources
parKin_SOURCES =	SpookyHash/SpookyV2.h \
					SpookyHash/SpookyV2.cpp \
					SpookyHash/SpookyHashMap.h \
					BIUlibPart/OptionParser.h \
					BIUlibPart/OptionParser.cpp \
					BIUlibPart/LimitedHash.hh \
					BIUlibPart/LimitedHash.icc \
					BIUlibPart/assertbiu.hh \
					BIUlibPart/MatrixSparse.hh \
					BIUlibPart/MatrixSparse.icc \
					RNAkinetics/RateMatrixUtil.h \
					RNAkinetics/RateMatrixUtil.cpp \
					RNAkinetics/RNA_NeighMinFilter.h \
					RNAkinetics/RNA_NeighMinFilter.cpp \
					TypeID.h \
					TypeID.cpp \
					Concurrent_Queue.h \
					MyState.h \
					MyState.cpp \
					PriorityQueue.h \
					Flooder.h \
					Flooder.cpp \
					WalkGradientHashed.h \
					WalkGradientHashed.cpp \
					StructureUtils.h \
					StructureUtils.cpp \
					PairHashTable.h \
					Concurrent_Pair_Hash_Map.h \
					PairHashMap.h \
                    SC_PartitionFunction.h \
                    SC_PartitionFunction.cpp \
                    SC_DotPlot.h \
                    SC_DotPlot.cpp \
				    StateCollector.h \
				    StateCollector.cpp \
				    StatePairCollector.h \
				    StatePairCollector.cpp \
                    ParKin.cpp
                    # PriorityQueue.cpp 
                    
					
					